src/test/ui/missing-items/missing-type-parameter.stderr
error[E0282]: unable to fully infer type(s)
  --> $DIR/missing-type-parameter.rs:14:5
   |
14 |     foo();
   |     ^^^ cannot infer type
   |
   = note: type annotations or generic parameter binding required

error: aborting due to previous error


